--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
         with:
           dotnet-version: '10.0.x'
           cache: true
+          cache-dependency-path: |
+            src/Planara.Common/packages.lock.json
 
       - name: Restore
         run: dotnet restore Planara.Common.sln
